// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api with multiple methods on same route 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "Processing \\"GET /hello\\".",
  "Invoke (payload=undefined).",
  "GET /hello - 200.",
  "Processing \\"POST /hello\\".",
  "Invoke (payload=undefined).",
  "POST /hello - 200.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`api with multiple methods on same route 2`] = `
{
  "app.wsim/simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_api-OnRequestHandler-7c48a9f0",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_api-onrequesthandler-7c48a9f0_c85db096/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api-OnRequestHandler-f6d90a7f",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_api-onrequesthandler-f6d90a7f_c856b9bb/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "routes": [
            {
              "functionHandle": "\${root/my_api-OnRequestHandler-7c48a9f0#attrs.handle}",
              "method": "GET",
              "route": "/hello",
            },
            {
              "functionHandle": "\${root/my_api-OnRequestHandler-f6d90a7f#attrs.handle}",
              "method": "POST",
              "route": "/hello",
            },
          ],
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": {
    "tree": {
      "children": {
        "Handler1": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler1",
          "path": "root/Handler1",
        },
        "Handler2": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler2",
          "path": "root/Handler2",
        },
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_api-OnRequestHandler-7c48a9f0",
              },
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_api-OnRequestHandler-f6d90a7f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api-OnRequestHandler-7c48a9f0",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_post_request",
                "resource": "root/my_api-OnRequestHandler-f6d90a7f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
        "my_api-OnRequestHandler-7c48a9f0": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_api-OnRequestHandler-7c48a9f0",
          "path": "root/my_api-OnRequestHandler-7c48a9f0",
        },
        "my_api-OnRequestHandler-f6d90a7f": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_post_request",
                "resource": "root/my_api",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_api-OnRequestHandler-f6d90a7f",
          "path": "root/my_api-OnRequestHandler-f6d90a7f",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "assets/my_api-onrequesthandler-7c48a9f0_c85db096/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(req) {
        return { status: 200, body: \\"boom\\" };
      }
    };
  }())({}).handle(event);
};
",
  "assets/my_api-onrequesthandler-f6d90a7f_c856b9bb/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(req) {
        return { status: 200, body: \\"bang\\" };
      }
    };
  }())({}).handle(event);
};
",
}
`;

exports[`api with multiple routes 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "Processing \\"GET /hello/world\\".",
  "Invoke (payload=undefined).",
  "GET /hello/world - 200.",
  "Processing \\"GET /hello/wingnuts\\".",
  "Invoke (payload=undefined).",
  "GET /hello/wingnuts - 200.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`api with multiple routes 2`] = `
{
  "app.wsim/simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_api-OnRequestHandler-7c48a9f0",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_api-onrequesthandler-7c48a9f0_c85db096/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api-OnRequestHandler-f6d90a7f",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_api-onrequesthandler-f6d90a7f_c856b9bb/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "routes": [
            {
              "functionHandle": "\${root/my_api-OnRequestHandler-7c48a9f0#attrs.handle}",
              "method": "GET",
              "route": "/hello/world",
            },
            {
              "functionHandle": "\${root/my_api-OnRequestHandler-f6d90a7f#attrs.handle}",
              "method": "GET",
              "route": "/hello/wingnuts",
            },
          ],
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": {
    "tree": {
      "children": {
        "Handler1": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler1",
          "path": "root/Handler1",
        },
        "Handler2": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler2",
          "path": "root/Handler2",
        },
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_api-OnRequestHandler-7c48a9f0",
              },
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_api-OnRequestHandler-f6d90a7f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api-OnRequestHandler-7c48a9f0",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api-OnRequestHandler-f6d90a7f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
        "my_api-OnRequestHandler-7c48a9f0": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_api-OnRequestHandler-7c48a9f0",
          "path": "root/my_api-OnRequestHandler-7c48a9f0",
        },
        "my_api-OnRequestHandler-f6d90a7f": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_api-OnRequestHandler-f6d90a7f",
          "path": "root/my_api-OnRequestHandler-f6d90a7f",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "assets/my_api-onrequesthandler-7c48a9f0_c85db096/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(req) {
        return { status: 200, body: \\"boom\\" };
      }
    };
  }())({}).handle(event);
};
",
  "assets/my_api-onrequesthandler-f6d90a7f_c856b9bb/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(req) {
        return { status: 200, body: \\"bang\\" };
      }
    };
  }())({}).handle(event);
};
",
}
`;

exports[`api with one GET route 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "Processing \\"GET /hello\\".",
  "Invoke (payload=undefined).",
  "GET /hello - 200.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`api with one GET route 2`] = `
{
  "app.wsim/simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_api-OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_api-onrequesthandler-e645076f_c8f990c6/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "routes": [
            {
              "functionHandle": "\${root/my_api-OnRequestHandler-e645076f#attrs.handle}",
              "method": "GET",
              "route": "/hello",
            },
          ],
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_api-OnRequestHandler-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api-OnRequestHandler-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
        "my_api-OnRequestHandler-e645076f": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_api-OnRequestHandler-e645076f",
          "path": "root/my_api-OnRequestHandler-e645076f",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "assets/my_api-onrequesthandler-e645076f_c8f990c6/index.js": "var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(req) {
        return { status: 200, body: \\"boom\\" };
      }
    };
  }())({}).handle(event);
};
",
}
`;

exports[`create an api 1`] = `
{
  "app.wsim/simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "routes": [],
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": {
    "tree": {
      "children": {
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
